--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,16 @@
 <body>
     <h1>Blocks</h1>
     
+    <form>
+        <legend>New Block</legend>
+        <input name="name" placeholder="Name"></br>
+        <input name="description" placeholder="Description">
+        <input type="Submit">
+    </form>
+    
     <ul class='block-list'></ul>
     <!--to manipulate the dom--> 
-    <script src="jquery.js"></script>
+    <script src="jquery-3.3.1.min.js"></script>
     <!--to talk to client api-->
     <script src="client.js"></script>
 </body>
