--- a/public/index.html
+++ b/public/index.html
@@ -17,8 +17,8 @@
     
     <ul class='block-list'></ul>
     <!--to manipulate the dom--> 
-    <script src="jquery-3.3.1.min.js"></script>
-    <!--to talk to client api-->
+     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>    
+     <!--to talk to client api-->
     <script src="client.js"></script>
 </body>
 </html>
